# douyin

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  douyin-recall-spec.md  pyproject.toml
docs/: architecture.md  data-backup-and-uninstall.md  multi-tenant-roadmap.md  release-checklist.md  roadmap.md  windows-task-scheduler.md  windows-troubleshooting.md
relcheck/: __init__.py  acceptance_matrix.py  backup_drill.py  database_safety.py  delivery_evidence.py  final_release_check.py  installed_smoke.py  performance_benchmark.py  preflight_summary.py  query_performance.py  release_gate.py
scripts/: acceptance_matrix.py  backup_restore_drill.py  benchmark_web_pages.py  database_safety_audit.py  final_release_check.ps1  final_release_check.py  inspect-installer.ps1  install-weekly-task.ps1  installed_smoke.py  preflight_summary.py  qa-installed-build.ps1  qa-upgrade-build.ps1  query_performance_audit.py  release_gate.ps1  release_gate.py  run-weekly-maintenance.ps1  validate_delivery_evidence.py
src/: accounts.py  category_import.py  cli.py  config.py  db.py  diagnostics.py  doctor.py  exporter.py  jobs.py  maintenance.py  models.py  onboarding.py  server_runtime.py  tenancy.py  update_check.py
tests/: test_accounts.py  test_author_avatars.py  test_avatar_cache_security.py  test_categories.py  test_category_import.py  test_content_kinds.py  test_crawler_api.py  test_db_connections.py  test_db_migrations.py  test_db_schema.py  test_diagnostics.py  test_doctor.py  test_documentation.py  test_exporter.py  test_indexer_content_kinds.py  test_jobs.py  (+23 more)
(+119 files in other folders)
